--- a/assets/theme-styles/blog-layouts/grid-layouts.less
+++ b/assets/theme-styles/blog-layouts/grid-layouts.less
@@ -31,12 +31,13 @@
     img {
       .transition(0.4s all ease);
     }
-    &:hover {
-      img {
-        .transition(0.4s all ease);
-        .transform( scale(1.1) );
+    @media screen and (min-width: 767px) {
+      &:hover {
+        img {
+          .transition(0.4s all ease);
+          .transform(scale(1.1));
 
-
+        }
       }
     }
   }
