--- a/assets/theme-styles/featured-components/featured-area1.less
+++ b/assets/theme-styles/featured-components/featured-area1.less
@@ -23,12 +23,19 @@
       position: absolute;
       top: -10px;
       left: 50%;
-      .transform(translateX(-50%));
+      @media screen and (max-width: 767px) {
+        left: 30%;
+      }
+        @media screen and (min-width: 767px) {
+        .transform(translateX(-50%));
+      }
       text-align: center;
       font-weight: bolder;
       text-transform: uppercase;
       z-index: 10;
-      .transition(0.4s all ease);
+      @media screen and (min-width: 767px) {
+        .transition(0.4s all ease);
+      }
       pointer-events: none;
 
       &:after {
@@ -44,7 +51,9 @@
         border-bottom: 15px @accent solid;
         border-right: solid 15px transparent;
         border-top: solid 15px transparent;
-        .transform(rotateZ(-45deg));
+        //@media screen and (min-width: 767px) {
+          .transform(rotateZ(-45deg));
+        //}
         z-index: 5;
       }
       span {
@@ -70,33 +79,47 @@
           width: 100%;
         }
       }
-      &:hover {
-        img {
-          .transform( translateX(0px) );
-          opacity: 1;
-        }
-        .titledesc {
-          display: block;
-          .transform( translateX(0px) );
-          /* left: 0; */
-          opacity: 1;
 
+      @media screen and (min-width: 767px) {
+        &:hover {
+            img {
+              .transform(translateX(0px));
+              opacity: 1;
+            }
+          }
+          .titledesc {
+            display: block;
+            .transform(translateX(0px));
+            /* left: 0; */
+            opacity: 1;
+
+          }
         }
+
+      .titledesc {
+        display: block;
+        opacity: 1;
+
       }
     }
     .titledesc {
       display: block;
       position: absolute;
       background: fade(black, 45%);
-      .transition(0.8s all ease);
-      .transform( translateY(-5px) );
+      @media screen and (min-width: 767px) {
+        .transition(0.8s all ease);
+        .transform(translateY(-5px));
+      }
       top: 0px;
       left: 0px;
       width: 100%;
       height: 100%;
-      opacity: 0;
+      @media screen and (min-width: 767px) {
+        opacity: 0;
+      }
       pointer-events: none;
       h2 {
+        padding: 20px;
         font-size: 14px;
         text-align: center;
         color: white;
@@ -109,7 +132,7 @@
         transform: translateY(-50%);
         @media screen and (max-width: 767px) {
           font-size: 12px;
-          top: 30%;
+          top: 50%;
         }
         a {
           color: white;
@@ -127,10 +150,12 @@
       }
     }
   }
-  .imgcontainer:hover {
-    .postdate {
-      opacity: 0;
-      top: -20px;
+  @media screen and (min-width: 767px) {
+    .imgcontainer:hover {
+      .postdate {
+        opacity: 0;
+        top: -20px;
+      }
     }
   }
 
