--- a/assets/theme-styles/sections/header.less
+++ b/assets/theme-styles/sections/header.less
@@ -7,6 +7,14 @@
   }
 }
 #masthead {
+  &:after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    margin-top: 15px;
+    background: @accent;
+  }
   text-align: left;
   min-height: 220px;
   #text-title-desc {
@@ -63,10 +71,10 @@
      border-radius: 50%;
      font-size: 18px;
      @media screen and (max-width: 767px) {
-       width: 40px;
-       height: 40px;
-       padding-top: 10px;
-       font-size: 14px;
+       width: 32px;
+       height: 32px;
+       padding-top: 6px;
+       font-size: 12px;
      }
    }
  }
