--- a/assets/theme-styles/sections/social-icons.less
+++ b/assets/theme-styles/sections/social-icons.less
@@ -1,6 +1,6 @@
 #social-icons {
   text-align: center;
-  margin-top: 10px;
+  margin-top: 20px;
   .social-icon {
     display: inline-block;
     background: @sbg;
@@ -14,10 +14,10 @@
     font-size: 18px;
     .transition(0.4s all ease);
     @media screen and (max-width: 767px) {
-      width: 40px;
-      height: 40px;
-      padding-top: 10px;
-      font-size: 14px;
+      width: 32px;
+      height: 32px;
+      padding-top: 6px;
+      font-size: 12px;
     }
     &:before {
       border: dotted 1px @accent;
@@ -75,12 +75,13 @@
     text-align: center;
     border-radius: 50%;
     font-size: 18px;
-
     .transition(0.4s all ease);
-    @media screen and (max-width: 767px) {
-      width: 40px;
-      height: 40px;
-      padding-top: 10px;
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+      width: 32px;
+      height: 32px;
+      padding-top: 6px;
+      text-align: center;
+      border-radius: 50%;
       font-size: 14px;
     }
     &:before {
