--- a/assets/theme-styles/sections/social-icons.less
+++ b/assets/theme-styles/sections/social-icons.less
@@ -77,12 +77,12 @@
     font-size: 18px;
     .transition(0.4s all ease);
     @media screen and (min-width: 768px) and (max-width: 1200px) {
-      width: 32px;
-      height: 32px;
-      padding-top: 6px;
-      text-align: center;
-      border-radius: 50%;
-      font-size: 14px;
+      width: 32px !important;
+      height: 32px !important;
+      padding-top: 6px !important;
+      text-align: center !important;
+      border-radius: 50% !important;
+      font-size: 14px !important;
     }
     &:before {
       border: dotted 1px @accent;
