--- a/assets/theme-styles/skins/orange.less
+++ b/assets/theme-styles/skins/orange.less
@@ -1,9 +1,12 @@
 @import '../variables';
 @import '../functions';
 
+
 @accent: #e48d48;
 
 @import '../_init';
+@import '../woocommerce';
+
 #site-navigation ul ul li:nth-child(2n){
   background: #cccccc;
   &:hover{
