--- a/assets/theme-styles/skins/purple.less
+++ b/assets/theme-styles/skins/purple.less
@@ -4,6 +4,8 @@
 @accent: #D19AD6;
 
 @import '../_init';
+@import '../woocommerce';
+
 #site-navigation ul ul li:nth-child(odd){
   background: @accent;
 }
