--- a/assets/theme-styles/sections/universal.less
+++ b/assets/theme-styles/sections/universal.less
@@ -1,3 +1,9 @@
+.body-font {
+  font-family: "Slabo 27px", serif;
+}
+.title-font {
+  font-family: "Bree Serif", serif;
+}
 body {
   .body-font;
   background: @background;
