Customizer Upgraded, Skin Feature Upgraded, Version Not Updated

--- a/assets/theme-styles/featured-components/_init_featured.less
+++ b/assets/theme-styles/featured-components/_init_featured.less
@@ -2,3 +2,5 @@
 @import "featured-area1";
 @import "featured-area2";
 @import "page_contactus";
+@import "fposts-slider";
+@import "featured-mega-post";
