--- a/assets/theme-styles/sections/navigation.less
+++ b/assets/theme-styles/sections/navigation.less
@@ -107,6 +107,13 @@
       color: @onaccent !important;
       text-decoration: none;
     }
+    ul {
+      li {
+        ul {
+          display: none;
+        }
+      }
+    }
   }
 }
 //main-menu
