--- a/assets/theme-styles/woocommerce.less
+++ b/assets/theme-styles/woocommerce.less
@@ -63,7 +63,8 @@ p.demo_store {
 		overflow: auto;
 
 		&:before {
-			font-family: "FontAwesome";
+			font-family: "Font Awesome 5 Free";
+			font-weight: 900;
 			content: "\f05a";
 			display: inline-block;
 			position: absolute;
@@ -86,7 +87,8 @@ p.demo_store {
 		border-top-color: #8fae1b;
 
 		&:before {
-			font-family: 'FontAwesome';
+			font-family: 'Font Awesome 5 Free';
+			font-weight: 900;
 			content: "\f00c";
 			color: #8fae1b;
 		}
@@ -266,7 +268,8 @@ p.demo_store {
 			border-radius: 0;
 			&:after {
 		    	content: "\f103";
-		    	font-family: "FontAwesome";
+		    	font-family: "Font Awesome 5 Free";
+				font-weight: 900;
 		    	color: white;
 		    	position: absolute;
 		    	right: 27px;
@@ -331,7 +334,8 @@ p.demo_store {
 	display: block;
 	height: 18px;
 	overflow: hidden;
-	font-family: 'FontAwesome';
+	font-family: 'Font Awesome 5 Free';
+	font-weight: 900;
 	text-align: center;
 	margin: 1px auto 6px auto !important;
 	width: 78px;
@@ -443,7 +447,8 @@ p.stars {
 			border-right: 1px solid #ccc;
 
 			&:after {
-				font-family: "FontAwesome";
+				font-family: "Font Awesome 5 Free";
+				font-weight: 900;
 				text-indent: 0;
 				position: absolute;
 				top: 0;
@@ -558,7 +563,8 @@ ol.commentlist {
 			padding-right: 2.618em;
 
 			&:after {
-				font-family: "FontAwesome";
+				font-family: "Font Awesome 5 Free";
+				font-weight: 900;
 				content: "\f110";
 				margin-left: .53em;
 				vertical-align: bottom;
@@ -570,7 +576,8 @@ ol.commentlist {
 
 		&.added {
 			&:after {
-				font-family: 'FontAwesome';
+				font-family: 'Font Awesome 5 Free';
+				font-weight: 900;
 				content: "\f00c";
 				margin-left: .53em;
 				vertical-align: bottom;
@@ -1079,7 +1086,8 @@ ol.commentlist {
 				&:after {
 					/* icon here */
 					content: "\f072";
-					font-family: "FontAwesome";
+					font-family: "Font Awesome 5 Free";
+					font-weight: 900;
 					padding-left: 5px;
 					position: relative;
 					top: 2px;
