--- a/assets/theme-styles/admin-styles/admin.less
+++ b/assets/theme-styles/admin-styles/admin.less
@@ -1,7 +1,76 @@
+@import "../variables";
+@import "../functions";
+
+
 /* Customizer Styles */
-li#accordion-section-protopress_sec_upgrade h3 {
+li#accordion-section-revive_sec_upgrade h3 {
 	&:before {
-		content: "\f005";
-		font-family: "FontAwesome";
+		content: "\f05a";
+		font-family: "Font Awesome 5 Free";
+		font-weight: 900;
+	}
+}
+
+/* ----------------
+Important Links
+ -----------------*/
+.revive-important-links{
+	background: @accent;
+	padding: 5px 10px;
+	color: #FFF !important;
+	text-align: center;
+	display: block;
+	margin-top: 5px;
+	line-height: 1.2;
+	box-shadow: none;
+	font-style: normal;
+	text-decoration: none;
+}
+.revive-important-links:hover{
+	background: darken(@accent, 15%);
+}
+
+/*-------------
+Skins
+ --------------*/
+.revive-skin-list li.color-boxes {
+	display: inline-block;
+	margin-right: 6px;
+	border: 4px solid transparent;
+}
+
+.revive-skin-list li.skin-active {
+	border: 4px solid #FFF;
+}
+
+.revive-skin-list li:hover {
+	border: 4px solid #FFF;;
+}
+
+.customize-control-skins {
+	.custom_skin_control {
+		display: inline-block;
+		margin: 0;
+		width: 50px;
+		height: 50px;
+		margin-bottom: 4px;
+		position: relative;
+	}
+	input[type=radio]:checked:before {
+		content: "\f00c" !important;
+		font-family: "Font Awesome 5 Free";
+		font-weight: 900;
+		text-indent: 0;
+		color: white;
+		position: absolute;
+		font-size: 17px !important;
+		top: 53%;
+		left: 30%;
+		width: 0 !important;
+		height: 0 !important;
+		margin: 0 !important;
+		background: none;
+		line-height: 0 !important;
+		border-radius: 0;
 	}
 }
