--- a/assets/theme-styles/sections/footer.less
+++ b/assets/theme-styles/sections/footer.less
@@ -111,7 +111,8 @@
     .widget_recent_entries, .widget_recent_comments, .widget_categories, .widget_pages, .widget_archive, .widget_meta, .widget_nav_menu {
       ul li:before {
         content: "\f04b";
-        font-family: "FontAwesome";
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
         color: @accent;
         font-size: 10px;
         margin-right: 5px;
