--- a/assets/theme-styles/sections/header.less
+++ b/assets/theme-styles/sections/header.less
@@ -19,7 +19,6 @@
   min-height: 220px;
   #text-title-desc {
     clear: none;
-    float: left;
     @media screen and (max-width: 768px) {
       float: none;
     }
@@ -50,7 +49,8 @@
 }
 #site-logo {
   display: inline-block;
-  float: left;
+  max-width: 300px;
+  max-height: 300px;
   @media screen and (max-width: 768px) {
     float: none;
   }
