--- a/assets/theme-styles/sections/universal.less
+++ b/assets/theme-styles/sections/universal.less
@@ -54,3 +54,12 @@ a {
 #content {
   margin-top: 0px;
 }
+
+.layer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: fade(black,60%);
+}
