Added New Featured Areas, Improved Customizer Interface, Added WP-Forms Support - v1.2

--- a/assets/theme-styles/admin-styles/admin.less
+++ b/assets/theme-styles/admin-styles/admin.less
@@ -74,3 +74,24 @@ Skins
 		border-radius: 0;
 	}
 }
+
+/*------------------
+   AJAX Dropdown
+------------------*/
+
+#search-results {
+	ul {
+		background: white;
+		border: solid 1px #ddd;
+		li {
+			margin: 0px;
+			padding: 5px 8px;
+			word-wrap: break-word;
+			cursor: default;
+			&:hover {
+				background: #aaa;
+				color: white;
+			}
+		}
+	}
+}
