--- a/assets/theme-styles/featured-components/featured-mega-post.less
+++ b/assets/theme-styles/featured-components/featured-mega-post.less
@@ -1,4 +1,7 @@
 #featured-mega-post {
+	.section-title {
+		margin-bottom: 0px;
+	}
   #fm-post-wrapper {
     background: #efefef;
     overflow: auto;
@@ -25,7 +28,7 @@
         font-size: 50px;
       }
       .excerpt {
-        font-size: 20px;
+        font-size: 17px;
         line-height: 33px;
       }
       .readmore {
@@ -38,6 +41,10 @@
           display: inline-block;
         }
       }
+    }
+    .centered {
+	    text-align: center;
+	    padding: 0;
     }
     .featured-thumb {
       padding: 0;
