--- a/assets/theme-styles/sections/header.less
+++ b/assets/theme-styles/sections/header.less
@@ -19,6 +19,7 @@
   min-height: 220px;
   #text-title-desc {
     clear: none;
+    display: inline-block;
     @media screen and (max-width: 768px) {
       float: none;
     }
