--- a/assets/theme-styles/featured-components/fposts-slider.less
+++ b/assets/theme-styles/featured-components/fposts-slider.less
@@ -2,9 +2,19 @@
   margin-top: 40px;
   margin-bottom: 0px;
   padding: 15px;
-  .nivoSliderPosts {
+  #nivoSliderPosts {
     box-shadow: none;
     border: solid 5px #eee;
+    .nivo-caption {
+	    .readmore {
+		    background: rgba(255,255,255,.5);
+		    border-left: solid 4px @accent;
+		    padding: 8px 14px;
+		    display: inline-block !important;
+		    font-weight: 700;
+		    text-shadow: 0px 1px 0px #000;
+	    }
+    }
   }
   .nivo-controlNav {
     position: relative;
@@ -12,48 +22,6 @@
     z-index: 9;
     @media screen and (max-width: 767px) {
       bottom: 0px;
-    }
-  }
-  .nivo-html-caption {
-    bottom: 60px;
-    left: 55px;
-    right: auto;
-    font-family: inherit;
-    background: none;
-    @media screen and (max-width: 600px) {
-      .transform(scale(0.6));
-      bottom: 15px;
-      left: -50px;
-    }
-    a { text-decoration:  none;
-      border-bottom: none; }
-    .slide-title {
-      display: inline-block;
-      font-size: 24px;
-      @media screen and (max-width: 1200px){
-        font-size: 16px;
-      }
-      padding: 10px;
-      background: fade(black, 70%);
-      border-left: solid 4px @accent;
-      font-weight: lighter;
-    }
-    .slide-desc span {
-      background: fade(@accent, 50%);
-      /* border-left: solid 4px black; */
-      display: inline-block;
-      font-size: 16px;
-      padding: 8px;
-    }
-    .slide-cta span {
-      background: fade(black, 70%);
-      font-weight: bold;
-      display: inline-block;
-      font-size: 16px;
-      margin-top: 5px;
-      padding: 10px;
-      border-bottom: solid 2px black;
-
     }
   }
 }
