--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ Theme URI: http://inkhive.com/product/revive/
 Author: InkHive
 Author URI: http://inkhive.com
 Description: Revive is a Multi Purpose Theme with a Magazine Layout which can be easily optimized for other purposes too. This theme comes integrated with Font Awesome Icons, Multiple Blog Layouts, Sidebar Customizations and much more. Built on the Bootstrap 3.0 Framework, Revive has brilliant Responsive performance on Mobile and Tablet Devices as well. Demo here: http://demo.inkhive.com/revive
-Version: 1.1.0
+Version: 1.2
 License: GNU General Public License v3
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: revive
-Tags:  custom-background, three-columns, two-columns, one-column, custom-colors, flexible-header, right-sidebar, grid-layout, custom-menu, theme-options, threaded-comments, translation-ready, featured-images, photography, full-width-template, custom-header, blog, news, entertainment, footer-widgets
+Tags:  custom-background, three-columns, two-columns, one-column, custom-colors, flexible-header, right-sidebar, grid-layout, custom-menu, theme-options, threaded-comments, translation-ready, featured-images, photography, full-width-template, custom-header, footer-widgets
 
 Revive WordPress Theme, Copyright (C) 2016, InkHive.com
 Revive is distributed under the terms of the GNU GPL v3
