Added Slider Functionality, added WPForms notification and ShareASale ID - Public Release v1.2.1

--- a/assets/theme-styles/admin-styles/admin.less
+++ b/assets/theme-styles/admin-styles/admin.less
@@ -95,3 +95,35 @@ Skins
 		}
 	}
 }
+
+/*--------------------
+	Slider Styling
+--------------------*/
+
+/**
+ *	Styling for RT-Slider goes here
+**/
+
+.customize-control {
+	.slide_thumbs {
+		.slide-image {
+			position: relative;
+			margin-bottom: 15px;
+			h2 {
+				position: relative;
+				background: darken(@background, 5%);
+				padding: 12px 16px;
+				cursor: pointer;
+				span.dashicons {
+					float: right;
+				}
+			}
+			.remove_slide_button {
+				margin-top: 10px;
+			}
+		}
+	}
+	.reset_slide_button {
+		float: right;
+	}
+}
