--- a/assets/theme-styles/css/admin.css
+++ b/assets/theme-styles/css/admin.css
@@ -129,3 +129,28 @@ Skins
   background: #aaa;
   color: white;
 }
+/*--------------------
+	Slider Styling
+--------------------*/
+/**
+ *	Styling for RT-Slider goes here
+**/
+.customize-control .slide_thumbs .slide-image {
+  position: relative;
+  margin-bottom: 15px;
+}
+.customize-control .slide_thumbs .slide-image h2 {
+  position: relative;
+  background: #f2f2f2;
+  padding: 12px 16px;
+  cursor: pointer;
+}
+.customize-control .slide_thumbs .slide-image h2 span.dashicons {
+  float: right;
+}
+.customize-control .slide_thumbs .slide-image .remove_slide_button {
+  margin-top: 10px;
+}
+.customize-control .reset_slide_button {
+  float: right;
+}
