Fixed Logo Overlap, fixed Contact Form Customizer Bug - Public Release 1.2.2

--- a/assets/theme-styles/admin-styles/admin.less
+++ b/assets/theme-styles/admin-styles/admin.less
@@ -127,3 +127,11 @@ Skins
 		float: right;
 	}
 }
+
+/*--------------------
+ WPForms Notification
+--------------------*/
+
+.wpforms-notice {
+	padding: 0 5%;
+}
