--- a/assets/theme-styles/css/admin.css
+++ b/assets/theme-styles/css/admin.css
@@ -154,3 +154,9 @@ Skins
 .customize-control .reset_slide_button {
   float: right;
 }
+/*--------------------
+ WPForms Notification
+--------------------*/
+.wpforms-notice {
+  padding: 0 5%;
+}
