--- a/assets/theme-styles/css/default.css
+++ b/assets/theme-styles/css/default.css
@@ -169,7 +169,6 @@ a:hover {
 #site-logo {
   display: inline-block;
   max-width: 300px;
-  max-height: 300px;
 }
 @media screen and (max-width: 768px) {
   #site-logo {
@@ -332,6 +331,7 @@ a:hover {
   -moz-transition: 0.4s all ease;
   -ms-transition: 0.4s all ease;
   -o-transition: 0.4s all ease;
+  margin: 5px 5px;
 }
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   #social-icons-sticky .social-icon {
@@ -693,6 +693,7 @@ a:hover {
   top: -11px;
   text-align: center;
   overflow-y: visible;
+  z-index: 0;
 }
 #primary-mono .entry-meta .postdate .month {
   display: block;
@@ -704,21 +705,19 @@ a:hover {
 }
 #primary-mono .entry-meta .postdate:after {
   content: "";
-  width: 1px;
-  height: 1px;
-  background: transparent;
+  width: 70.71067812%;
+  padding-top: 70.71067812%;
+  background: #9ac4cc;
   position: absolute;
-  left: 10px;
-  bottom: -20px;
-  border-right: solid 23px #9ac4cc;
-  border-top: solid 23px #9ac4cc;
-  border-bottom: transparent solid 18px;
-  border-left: transparent solid 18px;
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -ms-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform-origin: bottom left;
 }
 #primary-mono .entry-meta .author {
   display: inline-block;
