--- a/assets/theme-styles/sections/single.less
+++ b/assets/theme-styles/sections/single.less
@@ -51,6 +51,7 @@
       top: -11px;
       text-align: center;
       overflow-y: visible;
+      z-index: 0;
       .month {
         display: block;
         font-weight: normal;
@@ -61,17 +62,15 @@
       }
       &:after {
         content: "";
-        width: 1px;
-        height: 1px;
-        background: transparent;
+        width: 100%/sqrt(2);
+        padding-top: 100%/sqrt(2);
+        background: @accent;
         position: absolute;
-        left: 10px;
-        bottom: -20px;
-        border-right: solid 23px @accent;
-        border-top: solid 23px @accent;
-        border-bottom: transparent solid 18px;
-        border-left: transparent solid 18px;
-        .transform(rotate(135deg));
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+        .transform(rotate(45deg));
+        transform-origin: bottom left;
       }
       &:before {
 
