--- a/assets/theme-styles/sections/social-icons.less
+++ b/assets/theme-styles/sections/social-icons.less
@@ -76,6 +76,7 @@
     border-radius: 50%;
     font-size: 18px;
     .transition(0.4s all ease);
+    margin: 5px 5px;
     @media screen and (min-width: 768px) and (max-width: 1200px) {
       width: 32px !important;
       height: 32px !important;
